# open_memory_suite

./: .coverage  .gitignore  .gitmodules  Dockerfile  IMPLEMENTATION_PLAN_NEXT.md  M2_MILESTONE_ACHIEVED.md  README.md  cost_model_pricebook.json  demo_frugal_dispatcher.py  demo_langchain_integration.py  demo_ml_enhanced_dispatcher.py  deploy.sh  docker-compose.yml  generate_production_training_data.py  implementationPlan.md  integration_test.py  memory_traces.jsonl  production_server.py  project_state_and_directions.md  pyproject.toml  show_session_files.py  simple_benchmark.py  test_priority_0_fixes.py  train_ml_policy.py  train_production_model.py  validate_benchmark_enhancement.py  validate_m2_milestone.py  validate_pipeline.py  validate_telemetry.py
benchmark/: adapters.yaml  anti_gaming.py  harness.py  harness2.py  harness_router.py  research_integration.py  run_eval.py
benchmark/datasets/: sample_conversations.json
benchmark/golden/: MANIFEST.sha256  conversation_flow.jsonl  factual_lookup.jsonl  relationship_memory.jsonl  semantic_search.jsonl
benchmark_results/: benchmark_results_20250806_142407.json
benchmark_traces/: faiss_sample_20250806_142400.jsonl  file_sample_20250806_142344.jsonl  memory_sample_20250806_141836.jsonl  memory_sample_20250806_142344.jsonl  memory_sample_20250812_013433.jsonl
data_generation/: auto_labeler.py
data_generation/output/: labeled_data_20250806_142817.json
demos/: personal_assistant.py
docs/: README.md  future_implementation_roadmap.md  status_update.md
ml_models/: three_class_router_v1.pkl  xgboost_memory_router_20250806_145712.pkl  xgboost_memory_router_config_20250806_145712.json  xgboost_memory_router_feature_extractor_20250806_145712.pkl  xgboost_memory_router_scaler_20250806_145712.pkl
ml_training/: three_class_router.py  xgboost_trainer.py
open_memory_suite/: __init__.py  server.py
open_memory_suite/adapters/: __init__.py  __main__.py  base.py  faiss_store.py  file_store.py  memory_store.py  registry.py  registry_loader.py
open_memory_suite/core/: tokens.py  (+3 more)
production_data/: dataset_metadata.json  production_training_data_20250805_015432.csv  production_training_data_20250805_015432.json  production_training_data_20250805_015515.csv  production_training_data_20250805_015515.json  production_training_data_20250805_015611.json  production_training_data_20250805_015612.csv
scripts/: initialize_cost_coefficients.py  test_basic.py  test_integration.py  test_memory_adapter.py  test_multi_adapter.py
test_output/: integration_index.index  integration_index.items  integration_test.jsonl
tests/: conftest.py  test_adapter_registry.py  test_adapters.py  test_cost_invariants.py  test_cost_model_invariants.py  test_dispatcher.py  test_harness.py  test_memory_store.py  test_ml_components.py  test_trace.py
validation_results/: benchmark_enhancement_results.json  validation_summary.md
(+19 files in other folders)
